Fix: relaycommand with generic type working (nuger package added)

--- a/CheckCarsDesktop/CheckCarsDesktop.csproj
+++ b/CheckCarsDesktop/CheckCarsDesktop.csproj
@@ -9,7 +9,12 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="CommunityToolkit.Mvvm" Version="8.4.0" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Shared\Commands\" />
   </ItemGroup>
 
 </Project>
