--- a/CheckCarsDesktop/CheckCarsDesktop.csproj
+++ b/CheckCarsDesktop/CheckCarsDesktop.csproj
@@ -16,6 +16,7 @@
   <ItemGroup>
     <PackageReference Include="CommunityToolkit.Mvvm" Version="8.4.0" />
     <PackageReference Include="GMap.NET.WinPresentation" Version="2.1.7" />
+    <PackageReference Include="MpCoding.WPF.LoadingAnimations" Version="1.0.2" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
   </ItemGroup>
 
