--- a/CheckCarsDesktop/CheckCarsDesktop.csproj
+++ b/CheckCarsDesktop/CheckCarsDesktop.csproj
@@ -18,6 +18,8 @@
     <PackageReference Include="GMap.NET.WinPresentation" Version="2.1.7" />
     <PackageReference Include="MpCoding.WPF.LoadingAnimations" Version="1.0.2" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
+    <PackageReference Include="System.Data.SqlClient" Version="4.8.6" />
+    <PackageReference Include="System.Drawing.Common" Version="4.7.2" />
   </ItemGroup>
 
 </Project>
