--- a/CheckCarsDesktop/CheckCarsDesktop.csproj
+++ b/CheckCarsDesktop/CheckCarsDesktop.csproj
@@ -17,6 +17,8 @@
     <PackageReference Include="CommunityToolkit.Mvvm" Version="8.4.0" />
     <PackageReference Include="GMap.NET.WinPresentation" Version="2.1.7" />
     <PackageReference Include="Meziantou.Framework.WPF" Version="1.5.6" />
+    <PackageReference Include="Microsoft.Extensions.Configuration" Version="9.0.1" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="9.0.1" />
     <PackageReference Include="MpCoding.WPF.LoadingAnimations" Version="1.0.2" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
     <PackageReference Include="System.Data.SqlClient" Version="4.8.6" />
